--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "express": "^4.17.1",
     "express-validator": "^6.11.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.12.10"
+    "mongoose": "^5.12.10",
+    "nodemailer": "^6.6.1"
   },
   "devDependencies": {
     "concurrently": "^6.1.0",
